--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "bootstrap": "^5.1.3",
+    "carbon-components": "^10.56.0",
+    "carbon-components-react": "^8.2.0",
+    "carbon-icons": "^7.0.7",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/carbon-components-react": "^7.55.1",
+    "@types/reactstrap": "^8.7.2",
+    "@types/uuid": "^8.3.4"
   }
 }
